fix more elements being too dark

--- a/_sass/j/cards.scss
+++ b/_sass/j/cards.scss
@@ -20,7 +20,7 @@
 
     a {
       transition: all 0.3s ease-out;
-      color: $brand-primary;
+      color: #a80000;
       text-decoration: none;
 
       &:hover {
